# Xtallography.jl

./: .flake8  .gitignore  .ignore  .pre-commit-config.yaml  DEVELOPER-NOTES.md  Makefile  NEWS.md  NOTICE  Project.toml  README.md  juliapkg.json  pyproject.toml  versions.js
.github/: CONTRIBUTING.md
.github/workflows/: CI.yml  CompatHelper.yml  gh-pages.yml
0.1.0/: .documenter-siteinfo.json  index.html
0.1.0/docs-index/: index.html
0.1.0/examples/: index.html
0.1.0/functions/: index.html
0.1.0/types/: index.html
0.1.1/: .documenter-siteinfo.json  index.html  search_index.js
0.1.1/docs-index/: index.html
0.1.1/examples/: index.html
0.1.1/functions/: index.html
0.1.1/types/: index.html
0.1.2/: .documenter-siteinfo.json  index.html
0.1.2/docs-index/: index.html
0.1.2/examples/: index.html
0.1.2/functions/: index.html
0.1.2/types/: index.html
0.2.0/: .documenter-siteinfo.json  index.html
0.3.0/: .documenter-siteinfo.json  index.html  search_index.js
0.3.1/: .documenter-siteinfo.json
0.3.2/: .documenter-siteinfo.json  index.html  objects.inv
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  make.jl
extras/: dot-envrc
src/: Xtallography.jl  XtallographyUtils.jl  constants.jl  lattice.jl  lattices.jl  math.jl  unit_cell.jl
test/: Project.toml  lattice_tests.jl  lattices_tests.jl  math_tests.jl  runtests.jl  unit_cell_tests.jl
v0.4.0/: .documenter-siteinfo.json  index.html  objects.inv
v0.4.1/: .documenter-siteinfo.json  index.html
v0.4.2/: .documenter-siteinfo.json  index.html  search_index.js
v0.4.3/: .documenter-siteinfo.json  index.html  objects.inv
v0.4.4/: .documenter-siteinfo.json  index.html
v0.4.5/: .documenter-siteinfo.json  index.html  objects.inv
v0.5.0/: .documenter-siteinfo.json  index.html  objects.inv
v0.5.1/: .documenter-siteinfo.json  index.html  objects.inv
v0.5.2/: .documenter-siteinfo.json  index.html
v0.5.3/: .documenter-siteinfo.json  index.html  search_index.js
v0.6.0/: .documenter-siteinfo.json  index.html  objects.inv
v0.7.0/: .documenter-siteinfo.json  index.html  objects.inv
(+294 files in other folders)
