[tool.poetry]
name = "XtallographyUtils"
version = "0.3.0"
description = "Library of utility functions for analysis of 3D crystals."
license = "Apache-2.0"
readme = "README.md"
authors = ["Kevin T. Chu <kevin@velexi.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
